{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 450,
  "lineage": "20253948-e6f9-641b-4b65-46d4c4323bf1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d4b65ff082c3c6a",
            "arn": "arn:aws:ec2:ap-northeast-1:665378081513:instance/i-056e8a3485a8c6794",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-056e8a3485a8c6794",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.small",
            "ipv6_address_count": 0,
            "key_name": "mine_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-018bf4f98d82efc81",
            "private_dns": "ip-10-1-0-9.ap-northeast-1.compute.internal",
            "private_ip": "10.1.0.9",
            "public_ip": "54.238.121.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b7ba4d9c114aaa22",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0288d05935baa0f11",
            "tags": {
              "Cost": "cost-minecraft",
              "Name": "minecraft-ec2-1"
            },
            "tags_all": {
              "Cost": "cost-minecraft",
              "Name": "minecraft-ec2-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04a0b1a0f9ac5cd67",
              "sg-06765631a655d569a"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-mine",
            "aws_security_group.sg-ssh",
            "aws_subnet.subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:665378081513:internet-gateway/igw-0f48acd752a931389",
            "id": "igw-0f48acd752a931389",
            "owner_id": "665378081513",
            "tags": {
              "Cost": "cost-minecraft",
              "Name": "minecraft-igw"
            },
            "tags_all": {
              "Cost": "cost-minecraft",
              "Name": "minecraft-igw"
            },
            "vpc_id": "vpc-083d57d6052909450"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:665378081513:route-table/rtb-08e97baa8fc3fe2a0",
            "id": "rtb-08e97baa8fc3fe2a0",
            "owner_id": "665378081513",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f48acd752a931389",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Cost": "cost-minecraft",
              "Name": "minecraft-rtb"
            },
            "tags_all": {
              "Cost": "cost-minecraft",
              "Name": "minecraft-rtb"
            },
            "vpc_id": "vpc-083d57d6052909450"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dac923d8341a570",
            "route_table_id": "rtb-08e97baa8fc3fe2a0",
            "subnet_id": "subnet-0288d05935baa0f11"
          },
          "dependencies": [
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "aws_internet_gateway.igw",
            "aws_route_table.route_table"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-mine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:665378081513:security-group/sg-06765631a655d569a",
            "description": "Allow Minecraft inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06765631a655d569a",
            "ingress": [
              {
                "cidr_blocks": [
                  "118.87.184.121/32"
                ],
                "description": "",
                "from_port": 25565,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 25565
              }
            ],
            "name": "tf-hito-sg-mine",
            "name_prefix": "",
            "owner_id": "665378081513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cost": "cost-minecraft",
              "Name": "minecraft-sg-mine"
            },
            "tags_all": {
              "Cost": "cost-minecraft",
              "Name": "minecraft-sg-mine"
            },
            "timeouts": null,
            "vpc_id": "vpc-083d57d6052909450"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:665378081513:security-group/sg-04a0b1a0f9ac5cd67",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a0b1a0f9ac5cd67",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tf-hito-sg-ssh",
            "name_prefix": "",
            "owner_id": "665378081513",
            "revoke_rules_on_delete": false,
            "tags": {
              "Cost": "cost-minecraft",
              "Name": "minecraft-sg-ssh"
            },
            "tags_all": {
              "Cost": "cost-minecraft",
              "Name": "minecraft-sg-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-083d57d6052909450"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "same_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4014810318",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04a0b1a0f9ac5cd67",
            "self": false,
            "source_security_group_id": "sg-04a0b1a0f9ac5cd67",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-ssh",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:665378081513:subnet/subnet-0288d05935baa0f11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0288d05935baa0f11",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "665378081513",
            "tags": {
              "Cost": "cost-minecraft",
              "Name": "minecraft-sbn-1a"
            },
            "tags_all": {
              "Cost": "cost-minecraft",
              "Name": "minecraft-sbn-1a"
            },
            "vpc_id": "vpc-083d57d6052909450"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:665378081513:vpc/vpc-083d57d6052909450",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0a48798c6f34ae04a",
            "default_route_table_id": "rtb-03d18e7d304e3ddf6",
            "default_security_group_id": "sg-0cefed1d89a00e40a",
            "dhcp_options_id": "dopt-0b888e729d0148858",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-083d57d6052909450",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03d18e7d304e3ddf6",
            "owner_id": "665378081513",
            "tags": {
              "Cost": "cost-minecraft",
              "Name": "minecraft-vpc"
            },
            "tags_all": {
              "Cost": "cost-minecraft",
              "Name": "minecraft-vpc"
            }
          }
        }
      ]
    }
  ]
}